<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/awayste_logo"
        android:layout_width="184dp"
        android:layout_height="83dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/awayste_logo"
        app:srcCompat="@drawable/awayste" />

    <TextView
        android:id="@+id/txtDonate2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/awayste_logo"
        android:layout_centerHorizontal="true"
        android:fontFamily="cursive"
        android:text="@string/awayste"
        android:textSize="40sp" />

    <Button
        android:id="@+id/disposeButton"
        android:layout_width="81dp"
        android:layout_height="69dp"
        android:layout_above="@+id/txtDispose2"
        android:layout_centerHorizontal="true"
        android:background="@drawable/trash" />

    <TextView
        android:id="@+id/txtDispose2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="255dp"
        android:fontFamily="@font/salsa"
        android:text="@string/txtDispose"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/donateButton"
        android:layout_width="88dp"
        android:layout_height="83dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/listButton"
        android:layout_marginStart="55dp"
        android:background="@drawable/donation"
        android:layout_marginLeft="55dp"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/txtDonate2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/donateButton"
        android:layout_toStartOf="@+id/disposeButton"
        android:fontFamily="@font/salsa"
        android:text="@string/txtDonate"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_toLeftOf="@+id/disposeButton"
        tools:ignore="DuplicateIds" />

    <Button
        android:id="@+id/listButton"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/txtDispose2"
        android:layout_marginEnd="59dp"
        android:layout_marginTop="-255dp"
        android:background="@drawable/list" />

    <TextView
        android:id="@+id/txtList"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/donateButton"
        android:layout_marginEnd="73dp"
        android:fontFamily="@font/salsa"
        android:text="@string/txtList"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/infoButton"
        android:layout_width="73dp"
        android:layout_height="72dp"
        android:layout_above="@+id/txtInfo"
        android:layout_centerHorizontal="true"
        android:background="@drawable/info" />

    <TextView
        android:id="@+id/txtInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/salsa"
        android:text="@string/txtInfo"
        android:textColor="@android:color/black"
        android:textSize="20sp" />


</RelativeLayout>
