<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtDonate2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="cursive"
        android:text="@string/awayste"
        android:textSize="40sp"
        tools:text="Donate" />

    <TextView
        android:id="@+id/noDonate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/usableCondition"
        android:layout_marginTop="101dp"
        android:fontFamily="@font/salsa"
        android:text="@string/noDonate"
        android:textSize="18sp"
        tools:ignore="InvalidId" />

    <TextView
        android:id="@+id/usableCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/salsa"
        android:text="@string/usableCondition"
        android:textSize="24sp" />

    <Button
        android:id="@+id/yesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/donateButton"
        android:layout_marginBottom="145dp"
        android:text="@string/yesButton" />

    <Button
        android:id="@+id/noButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/yesButton"
        android:layout_toEndOf="@+id/txtDonate2"
        android:text="@string/noButton" />

    <Button
        android:id="@+id/disposeButton"
        android:layout_width="52dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/donateButton"
        android:layout_marginStart="109dp"
        android:background="@drawable/trash" />

    <Button
        android:id="@+id/donateButton"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="25dp"
        android:background="@drawable/donation" />

    <Button
        android:id="@+id/listButton"
        android:layout_width="48dp"
        android:layout_height="47dp"
        android:layout_alignEnd="@+id/noButton"
        android:layout_alignTop="@+id/disposeButton"
        android:background="@drawable/list" />

    <Button
        android:id="@+id/infoButton"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:layout_alignEnd="@+id/txtDonate2"
        android:layout_alignTop="@+id/disposeButton"
        android:background="@drawable/info" />


</RelativeLayout>
