<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dispose_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".Dispose">

    <ImageView
        android:id="@+id/awayste_logo"
        android:layout_width="184dp"
        android:layout_height="83dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/awayste_logo"
        app:srcCompat="@drawable/awayste" />

    <TextView
        android:id="@+id/txtDonate2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/awayste_logo"
        android:layout_centerHorizontal="true"
        android:fontFamily="cursive"
        android:text="@string/awayste"
        android:textSize="40sp" />

    <Button
        android:id="@+id/disposeButton"
        android:layout_width="45dp"
        android:layout_height="38dp"
        android:layout_above="@+id/txtList"
        android:layout_toEndOf="@+id/awayste_logo"
        android:background="@drawable/trash" />

    <TextView
        android:id="@+id/txtDispose2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="147dp"
        android:fontFamily="@font/salsa"
        android:text="@string/txtDispose2"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/donateButton"
        android:layout_width="43dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="11dp"
        android:background="@drawable/donation" />

    <TextView
        android:id="@+id/txtDonate2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/donateButton"
        android:layout_toLeftOf="@+id/disposeButton"
        android:layout_toStartOf="@+id/disposeButton"
        android:fontFamily="@font/salsa"
        android:text="@string/txtDonate"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/listButton"
        android:layout_width="37dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/disposeButton"
        android:layout_marginStart="113dp"
        android:background="@drawable/list" />

    <TextView
        android:id="@+id/txtList"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/donateButton"
        android:layout_toEndOf="@+id/txtDonate2"
        android:layout_toRightOf="@+id/txtDonate2"
        android:fontFamily="@font/salsa"
        android:text="@string/txtList"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/infoButton"
        android:layout_width="39dp"
        android:layout_height="40dp"
        android:layout_alignEnd="@+id/txtDonate2"
        android:layout_alignTop="@+id/disposeButton"
        android:background="@drawable/info" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/txtDonate2"
        android:layout_marginBottom="208dp"
        android:text="Home" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txtDonate2"
        android:layout_alignParentTop="true"
        android:layout_marginTop="166dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />


</RelativeLayout>
